<resources>
    <string name="app_name">Task</string>
    <string name="tab_text_1">Ongoing Task</string>
    <string name="tab_text_2">Accomplished Task</string>
    <string name="addTask">Add Task</string>
    <string name="taskName">Excercise</string>
    <string name="days">7 Days</string>
    <string name="time">8.00am - 8.30am</string>
    <string name="mon">Mon</string>
    <string name="doneTask">Excercise</string>
    <string name="open_drawer">open</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="forevery">For Every</string>
    <string name="time1">Time</string>
    <string name="stime">Start</string>
    <string name="etime">End</string>
    <string name="notify">Notify me 5 miniutes before start</string>
</resources>